<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_head"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:text="@string/info1"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_head"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:text="@string/info2"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_head"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:text="@string/info3"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:text="@string/info_end"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <!-- android:textAppearance="?android:attr/textAppearanceLarge" -->

    <CheckBox
        android:id="@+id/checkBoxDoNotShowAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="不要再詢問我" />
    <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#8a888a" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <View
            android:id="@+id/viewCenterLine"
            android:layout_width="2px"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textViewAgree"
            android:layout_centerInParent="true"
            android:background="#8a888a" />

        <TextView
            android:id="@+id/textViewAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/viewCenterLine"
            android:gravity="center"
            android:padding="20dp"
            android:text="是" />

        <TextView
            android:id="@+id/textViewDisagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/viewCenterLine"
            android:gravity="center"
            android:padding="20dp"
            android:text="否" />
    </RelativeLayout>

</LinearLayout>